--- a/index.html
+++ b/index.html
@@ -14,28 +14,23 @@
 <body>
 <header>
 	<a href="index.html"><img src="img/bannerLens.png" /></a>
-	<nav id="menu">
-		<ul>
-			<li><a href="index.html">• photos •</a></li> | <li><a href="about.html">• about/shop •</a></li>
-		</ul>
-	</nav>
 	<hr class="dash">
 </header>
 
-<!-- <hr class="dash"> -->
-<section class="illustration">
-	<section class="gallery">
-	</section>
+&nbsp;
+
+<section class="gallery">
+	<img src="img/loading.png" />
 </section>
-<!-- <hr class="dash"> -->
+
+<section class="title">
+	<p>site is currently being built<br>
+	expected launch date is early 2024</p>
+</section>
+
+&nbsp;
 
 <hr class="dash">
-&nbsp;
-<p style="font-size: 1.2em; font-variant: common-ligatures small-caps;">all photography edited with affinity photo</p>
-&nbsp;
-<hr class="dash">
-
-<!--<a href="#" class="top">Back to Top</a>-->
 
 <footer>
 <section class="footerSocial">
