--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 
 <link href="css/global.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="favicon.png"/>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LRXNLC27YE"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	
+	gtag('config', 'G-LRXNLC27YE');
+</script>
 </head>
 
 <body>
