launch time update

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </section>
 
 <section class="title">
-	<p>site is currently being built<br>
-	expected launch date is early 2024</p>
+	<p>this aspect of necroembers is currently being assembled<br>
+	expected launch date is in summer 2024</p>
 </section>
 
 &nbsp;
