--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <footer>
 <section class="footerSocial">
-	<a href="https://www.instagram.com/necroembers" target="_blank" title="link in bio"><img src="img/instaIcon.png" /></a>
+	<a href="https://www.instagram.com/necroembers" target="_blank" title="instagram" alt="instagram"><img src="img/instaIcon.png" /></a>
 </section>
 <p>&copy; <script>document.write(new Date().getFullYear())</script> necroembers</p>
 </footer>
