--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 <header>
-	<a href="index.html"><img src="img/bannerLens.png" /></a>
+	<img src="img/bannerLens.png" />
 	<hr class="dash">
 </header>
 
@@ -35,16 +35,18 @@
 
 <section class="title">
 	<p>this aspect of necroembers is currently being assembled<br>
-	expected launch date is in summer 2024</p>
+	expected launch date is in summer 2024</p>&nbsp;
+	<p style="font-size: .69em;">return to main <a href="https://www.necroembers.com" target="_blank" alt="necroembers site">necroembers</a> website</p>
 </section>
 
 &nbsp;
-
 <hr class="dash">
 
 <footer>
 <section class="footerSocial">
-	<a href="https://www.instagram.com/necroembers" target="_blank" title="instagram" alt="instagram"><img src="img/instaIcon.png" /></a>
+	<a href="https://www.instagram.com/necroembers" target="_blank" title="necroember's instagram"><img src="img/instaIcon.png" alt="instagram icon" /></a>
+	<a href="https://shop.necroembers.com" target="_blank" title="necroember's fourthwall shop"><img src="img/fourthwall.png" alt="forthwall shop icon" /></a>
+	<a href="http://tee.pub/lic/ccmrixwSZSo" target="_blank" title="necroember's teepublic shop"><img src="img/teepublic.png" alt="teepublic shop icon" /></a>
 </section>
 <p>&copy; <script>document.write(new Date().getFullYear())</script> necroembers</p>
 </footer>
