--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
 <body>
 <header>
 	<img src="img/bannerLens.png" />
-	<hr class="dash">
 </header>
-
-&nbsp;
-
-<section class="gallery">
-	<img src="img/loading.png" />
-</section>
-
-<section class="title">
-	<p>this aspect of necroembers is currently being assembled<br>
-	expected launch date is in summer 2024</p>&nbsp;
-	<p style="font-size: .69em;">return to main <a href="https://www.necroembers.com" target="_blank" alt="necroembers site">necroembers</a> website</p>
-</section>
-
-&nbsp;
+<br>
+<main>
 <hr class="dash">
+&nbsp;
+<p style="color: #66dcef; font-size: 1.13em;">
+	you seem to have stumbled upon an old site<br>
+	visit <a href="https://www.necroembers.com" style="color: #efefef;">necroember's main site</a>, eh?
+</p>
 
+&nbsp;
+<section class="gallery">
+	<img src="img/shortHex.png" alt="hexagons" />
+</section>
+&nbsp;
+
+<hr class="dash">
+</main>
 <footer>
 <section class="footerSocial">
 	<a href="https://www.instagram.com/necroembers" target="_blank" title="necroember's instagram"><img src="img/instaIcon.png" alt="instagram icon" /></a>
